Week 6 style fix for prep list overflow

--- a/src/App.css
+++ b/src/App.css
@@ -245,6 +245,6 @@ label {
 }
 
 /* Styling for week 7 */
-.jumbotron #prepListWeek7 .prepListImg {
+.jumbotron .recipeCard .prepListImg {
    width: 80%;
 }
